--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>Asssim sigo a minha vida disse eu : <q>Eu te amo minha vida.</q><br><cite>Livro do meu amor por ela </cite></p> <!--CITAÇÃO DE FALA, QUEBRA DE LINHA, CITACAO TEXTUAL-->
     <HR>
         <!--link para site do google (url absoluta)-->
-    <a href="https://images.app.goo.gl/LM3aCZcgWm9KUE7U8">Veja eu e a minha momolada</a>
+    <a href="momo.html">Veja eu e a minha momolada</a>
     <br>
     <br>
     <!--link para outro site criado por mim (link relativo)-->
@@ -35,5 +35,6 @@
     <a href="C:\Users\Windows10\Downloads\images.pjp">teste de imagem </a> 
 (nao deu certo)
 --> 
+<img src="img/casal.jpg" width="200">   <!--imagem inserida para teste-->
 </body>
 </html>
