--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
     <p>Email:<address>guilherme.7395alves@gmail.com</address></p><!--ENDEREÇO-->
     <p>Number: <address>19987360530</address></p><!--ENDEREÇO-->
     <hr>
+
+    <hr>
     <!--
     <a href="C:\Users\Windows10\Downloads\images.pjp">teste de imagem </a> 
 (nao deu certo)
 --> 
-<img src="img/casal.jpg" width="200">   <!--imagem inserida para teste-->
+<a href="https://www.youtube.com/watch?v=tMWpm_GOLaA&ab_channel=Rubel"><img src="img/casal.jpg" width="200"> </a> <!--imagem inserida para teste-->
 </body>
 </html>
