--- a/index.html
+++ b/index.html
@@ -11,32 +11,49 @@
 </head>
 <body>
     <!-- ISSO É UM COMENTARIO -->
+
     <h1>Eu <mark>amo</mark> a minha <u><i><abbr title="Maria Eduarda Xavier Pereira">momolada</abbr></i></u></h1>  <!-- TITULO COM UM DESTAQUE NO 'AMO', SUBLINHADO E ITALICO NO 'MOMOLADA'-->
+
     <hr>  <!--LINHA VERTICAL NA PAGINA-->
-    <p>Todos sabem disso, mas deveria eu um <br><b><small>  <blockquote>JOVEM <del>>poeta></del></blockquote></small></b> <!--QUEBRA DE LINHA COM DESTAQUE, NEGRITO, RISCO NA PALAVRA, E LETRA PEQUENA--> <br>criar um site referente a isso </p>
+
+    <p>Todos sabem disso, mas deveria eu um <br><b><small>  <blockquote>JOVEM <del>>poeta></del></blockquote></small></b> 
+    
+     <!--QUEBRA DE LINHA COM DESTAQUE, NEGRITO, RISCO NA PALAVRA, E LETRA PEQUENA--> <br>criar um site referente a isso </p>
     <hr>  <!--OUTRO RISCO DE LINHA-->
     <h2><sup>Todos</sup> precisam saber <sub>disso</sub> ?</h2> <!--SUBTITULO COM ELEVAÇÃO E UM REBAIXAMENTO-->
+
     <p><strong>SIM</strong> todos devem ficar sabendo </p> <!--NEGRITO-->
+
     <hr> <!--MAIS UM RISCO DE LINHA-->
+
     <p>Asssim sigo a minha vida disse eu : <q>Eu te amo minha vida.</q><br><cite>Livro do meu amor por ela </cite></p> <!--CITAÇÃO DE FALA, QUEBRA DE LINHA, CITACAO TEXTUAL-->
     <HR>
         <!--link para site do google (url absoluta)-->
     <a href="momo.html">Veja eu e a minha momolada</a>
-    <br>
-    <br>
+
+    <br><br>
+
     <!--link para outro site criado por mim (link relativo)-->
     <a href="sobre.html">Veja sobre nos !</a>
     <HR>
+
     <address>Rua dos corações, cidade dos apaixonados, Sp.</address> <!--ENDEREÇO-->
     <p>Email:<address>guilherme.7395alves@gmail.com</address></p><!--ENDEREÇO-->
     <p>Number: <address>19987360530</address></p><!--ENDEREÇO-->
     <hr>
+<!--Um linl que abrira a sua outra pagina no iframe abaixo, usando o name no iframe e o target no link-->
+<a href="https://www.youtube.com/embed/tMWpm_GOLaA?si=Z4GNzCwtmIRh1ULw" target="musica">Uma musica dedicada a ela</a>
 
     <hr>
-    <!--
-    <a href="C:\Users\Windows10\Downloads\images.pjp">teste de imagem </a> 
-(nao deu certo)
---> 
-<a href="https://www.youtube.com/watch?v=tMWpm_GOLaA&ab_channel=Rubel"><img src="img/casal.jpg" width="200"> </a> <!--imagem inserida para teste-->
+
+   <!--Neste frame, adicionamos um acesso a outro site, -->
+   <iframe src="" name="musica" width="450" height="295"></iframe>
+
+    <a href="https://www.youtube.com/watch?v=tMWpm_GOLaA&ab_channel=Rubel"><img src="img/casal.jpg" width="200"> </a> 
+<br>
+
+
+<br>
+ 
 </body>
 </html>
