--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
     <meta name="author" content="GuiGui">
 
     <title>amo a minha momolada</title>
+    <style>
+        *{
+box-sizing: border-box;
+        }
+        body{
+            margin: 0;
+        }
+            .topo{
+background-color: rgba(196, 76, 150, 0.747);
+padding: 10px;
+}
+    </style>
 </head>
 <body>
     <!-- ISSO É UM COMENTARIO -->
-
+<header class="topo">
     <h1>Eu <mark>amo</mark> a minha <u><i><abbr title="Maria Eduarda Xavier Pereira">momolada</abbr></i></u></h1>  <!-- TITULO COM UM DESTAQUE NO 'AMO', SUBLINHADO E ITALICO NO 'MOMOLADA'-->
-
+</header>
     <hr>  <!--LINHA VERTICAL NA PAGINA-->
 
     <p>Todos sabem disso, mas deveria eu um <br><b><small>  <blockquote>JOVEM <del>>poeta></del></blockquote></small></b> 
@@ -50,9 +62,12 @@
    <iframe src="" name="musica" width="450" height="295"></iframe>
 
     <a href="https://www.youtube.com/watch?v=tMWpm_GOLaA&ab_channel=Rubel"><img src="img/casal.jpg" width="200"> </a> 
-<br>
-
-
+<br><br>
+<h4>Quando a minha princesa me ve ela ja pensa isso:</h4>
+<!--inserimos um audio no site-->
+<audio controls 
+src="audios/Maravilhoso, incrível, lindo lindo lindo lindo lindo lindo lindo lindo lindo lindo, lindoooooo! (64).mp3" type="audio/mpeg">
+</audio>
 <br>
  
 </body>
