--- a/sobre.html
+++ b/sobre.html
@@ -8,5 +8,22 @@
 <body>
     <h1>sobre nos </h1>
     <p>Aqui estamos nos, aprendendo um pocado</p>
+
+    <br><br>
+<!--inserindo audios no HTML-->
+    <audio controls 
+        src="https://tuningmania.com.br/autosom/mp3/0-intro%20to%20test%20section.MP3"></audio>
+<!--inserindo um video no nosso site-->
+<video 
+autoplay
+poster="img/gatos.jpg"  
+controls 
+width="80%" 
+type="video/mp4" 
+src="videos/sobre.html - sites - Visual Studio Code 2024-06-12 19-03-30.mp4">
+<!--configurações de controles, thumbmail, tamanho, tipo de arquivo e caminho-->
+
+</video>
+
 </body>
 </html>
