--- a/formulario.html
+++ b/formulario.html
@@ -36,7 +36,7 @@
     <label for="muitissimo">Muitissimo</label>
 
     <input type="radio" name="amor" id="conta" value="correto" required>
-    <label for="demais da conta">Demais da conta</label>
+    <label for="conta">Demais da conta</label>
 
 
     <br><br>
