--- a/estudos_css/sobre.html
+++ b/estudos_css/sobre.html
@@ -5,21 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilos/estilos.css">
-    <style>
 
-    </style>
 </head>
 <body style="background-color: #a7a7a7;">
     <h1>outra pagina</h1>
     <div class="teste">
         <p>esse paragrafo vai ter 300px por 150px</p>
+    </div>
+    <div class="flex-pai">
+        <div><a class="botao1" href="index.html">Voltar para a principal</a></div>
+        <div><a class="botao2" href="index.html">Voltar para a principal</a></div>
+        <div><a class="botao3" href="index.html">Voltar para a principal</a></div>
+        <div><a class="botao4" href="index.html">Voltar para a principal</a></div>
+        <div><a class="botao5" href="index.html">Voltar para a principal</a></div>
 
     </div>
-    <a class="botao1" href="index.html">Voltar para a principal</a><br><br><br>
-    <a class="botao2" href="index.html">Voltar para a principal</a><br><br><br>
-    <a class="botao3" href="index.html">Voltar para a principal</a><br><br><br>
-    <a class="botao4" href="index.html">Voltar para a principal</a><br><br><br>
-    <a class="botao5" href="index.html">Voltar para a principal</a><br><br><br>
-    
+
+
+
+
+<div class="conteiner">
+   <a href="google.com"><img src="../img/casal.jpg" style="max-width: 100%;">
+    <h2 style="color: black;" class="reduzido">amo demais a minha pequena</h2>
+    <p class="reduzido">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatem quaerat voluptates asperiores neque eum aperiam sequi, perspiciatis nesciunt hic, perferendis ipsum reprehenderit harum voluptate maiores soluta. Quaerat, sapiente reiciendis!</p>
+</div>
+  
+    <h1 class="multiplas">um texto de teste</h1>
 </body>
 </html>
